   deprecated.  Using one of these functions or commands results in a
   warning to the owner of the object executing them. Deprecated
   functions and commands might be removed in future patch levels;
   code using them needs to be rewritten. [SW]
 * Rewrite function restriction parsing and reporting to make it easier to
   add new restrictions. [SW]
 * Code cleanup. [SW]

Functions:
 * Mortals can now use lwho(me). Allows for lwho(%#) on ancestors to be
   used by all. Suggested by Minion. [MG]
 * xwho() now takes an optional <looker> arg, like lwho(). [MG]
 * rand() without an argument returns a floating point number greater than
   or equal to 0 and less than 1. [SW]

Locks:
 * New locks, @lock/filter and @lock/infilter, which must be passed (along
   with any @filter/@infilter set) for an object to forward sound. Patch
   by Padraic.

Fixes:
 * Verified that Penn compiles using the clang compiler, and fix a few
   warnings it generated. [SW]
 * Better fix for the DBREFLIST issue fixed in p6. [SW]
 * @pemit/list stopped reporting when it failed to match an object in p5.
   Reported by Padraic. [MG]
 * 'page' evaluated its args incorrectly when used in an $-command.
   Reported by Invidia@Dune3. [MG]
 * Win32 compile fixes by Daniel Powell. [MG]
 * Fix an off-by-one error in wrap(). Report by Padraic, patch by Minion [MG]
 * Sorting code didn't do proper objid checks, so setinter(#1:123, #1:456)
   would return #1:123 instead of nothing. [MG]
 * The Can_spoof power was only aliased to Can_nspemit (its original name)
   in upgraded dbs, not in new games created from minimal db. Reported by
   Ben Ramsey. [MG]
 * Fix a crash bug in @function/restrict on malformed input. Reported by
   Padraic. [SW]
 * Some fixes to the test suite. Reported by Covenent. [MG]

Version 1.8.4 patchlevel 6                                 Jul 29,  2011

Minor changes:
 * Clean up the linux inotify file monitoring code a bit. [SW]